--- a/scss/wcosaka2018.scss
+++ b/scss/wcosaka2018.scss
@@ -6,4 +6,6 @@
 @import "global/header";
 @import "global/navigation";
 @import "global/footer";
+@import "project/post-format";
+@import "project/page";
 @import "project/front-page";
