Change entry-header style.

--- a/scss/project/_front-page.scss
+++ b/scss/project/_front-page.scss
@@ -233,7 +233,7 @@ front-page
 
 .recent-posts {
     article {
-        background: url(../docs/images/wapu_bg.jpg) no-repeat;
+        //background: url(../docs/images/wapu_bg.jpg) no-repeat;
         background-size: 200px;
         padding-left: 100px;
         padding-right: 100px;
