Set only front style.

--- a/scss/wcosaka2018.scss
+++ b/scss/wcosaka2018.scss
@@ -8,4 +8,6 @@
 @import "global/footer";
 @import "project/post-format";
 @import "project/page";
-@import "project/front-page";
+.home {
+  @import "project/front-page";
+}
