--- a/scss/global/_navigation.scss
+++ b/scss/global/_navigation.scss
@@ -361,7 +361,7 @@
 
 @media screen and (min-width: 52em) {
 
-    .home .menu > li.btn-join {
+    .menu > li.btn-join {
         top: 360px;
     }
 
