--- a/scss/project/_post-format.scss
+++ b/scss/project/_post-format.scss
@@ -1,4 +1,4 @@
-.blog, .single-post, .page:not(.home){
+.blog, .single, .single-post, .page:not(.home){
     .entry-content {
     
         h1, h2, h3, h4, h5, h6{
