--- a/scss/project/_front-page.scss
+++ b/scss/project/_front-page.scss
@@ -123,7 +123,7 @@ front-page
         }
 
         .wp-custom-header {
-            max-width: 1200px;
+            //max-width: 1200px;
             position: relative;
             width: 100%;
             height: 100%;
@@ -138,7 +138,7 @@ front-page
         
         .wp-custom-header:after{
             content: "";
-            max-width: 1200px;
+            //max-width: 1200px;
             position: absolute;
             top: 0;
             width: inherit;
