--- a/scss/project/_page.scss
+++ b/scss/project/_page.scss
@@ -33,7 +33,7 @@ body:not(.home) .site-header{
 
 .page-header,
 body:not(.home):not(.blog):not(.single) .entry-header {
-    background: url(../docs/images/wapu_bg.jpg) center center no-repeat;
+    background: url(https://wcosaka2018.github.io/wcosaka2018-theme/images/wapu_bg.jpg) center center no-repeat;
     background-size: contain;
     min-height: 120px;
     padding: 0 !important;
