--- a/scss/global/_navigation.scss
+++ b/scss/global/_navigation.scss
@@ -44,6 +44,36 @@
     }
 }
 
+.home {
+    .navi-home {
+        @media screen and (min-width: 48em) {
+            display: none;
+        }
+    }
+}
+
+.navi-ticket {
+    margin-top: 2em;
+    @media screen and (min-width: 48em) {
+        margin-top: 0;
+    }
+    a {
+        display: block;
+        padding: 1em 2em;
+        border-radius: 1.75em;
+        background: linear-gradient(to right, $color-green, $color-lilac);
+        color: $color-white;
+        text-align: center;
+        @media screen and (min-width: 48em) {
+            text-align: left;
+        }
+    }
+}
+
+.navi-ticket-front {
+
+}
+
 @media screen and (min-width: 48em) {
     .navigation-top {
         .wrap {
@@ -54,6 +84,7 @@
         .main-navigation {
             ul.menu {
                 display: flex;
+                justify-content: flex-end;
                 li {
                     &:first-child {
                         flex: 1;
