Set half block style.

--- a/scss/project/_front-page.scss
+++ b/scss/project/_front-page.scss
@@ -1,6 +1,7 @@
 .twentyseventeen-panel {
+    border-top: none !important;
     .wrap {
-        padding: 4em 1.5em;
+        padding: 3em 1.5em;
     }
     &:first-child {
         overflow: visible;
