--- a/scss/global/_navigation.scss
+++ b/scss/global/_navigation.scss
@@ -74,6 +74,7 @@
     .navigation-top {
         .wrap {
             max-width: 100vw;
+            padding: 0.75em 1.5em;
         }
     }
     .js {
