Set page index style for front-page.

--- a/scss/global/_rule.scss
+++ b/scss/global/_rule.scss
@@ -24,3 +24,9 @@ $video-size: 700px;
         box-shadow: none;
     }
 }
+
+@mixin text-gradation( $dig:85deg, $start:$color-lilac, $end:$color-green) {
+    background: -webkit-linear-gradient($dig, $start, $end);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
